# thesis-code

./: .env.example  .gitignore  .scalafmt.conf  README.md  config.json  flake.nix  generate.scala  pyproject.toml  visualize_cnn.ipynb  visualize_cnn.py  visualize_lstm.ipynb  visualize_lstm.py
ast-tokenizer/: pyproject.toml
dataset/: schema.json  topics.json
dataset/generated_data/: idiomatic_snippets.jsonl  output.txt  regular_class_for_data_snippets.jsonl  uses_null_check_snippets.jsonl  uses_throw_snippets.jsonl
dataset/prompts/: generate_idiomatic.txt  generate_null_checks.txt  generate_regular_classes.txt  generate_throws.txt
generator/: config.json  generateDataset.scala
generator/prompts/: generate_idiomatic.txt  generate_throws.txt
results/: classes_for_data_snippets.jsonl  full_log.txt  null_checks_snippets.jsonl  raw_full.jsonl  throws_snippets.jsonl  vocab.json
results/cnn/: cnn_evaluation_results.json
results/logs/: log_1746097412492.txt  log_1746100168145.txt  log_1746102529458.txt  tokenizer_log_1746105899487.txt
results/lstm/: classes.json  evaluation_results.json  vocab.json
results/plots/: dataset_stats.json
results/raw/: idiomatic_snippets.jsonl  regular_class_for_data_snippets.jsonl  uses_null_check_snippets.jsonl  uses_throw_snippets.jsonl
src/: build_cnn.py  generate.sc  optimize_hyperparameters.py  optimizer.py  plot.py  plot_dataset.py  prompts.yaml  reader.py  schema.json  tokenize.sc  tokenize_snippets.py  utils.py
src/cnn/: build_model.py  optimize.py  run-experiments.py  train.py
src/generator/: generateDataset.scala
src/lstm/: build_model.py  classes.json  model.keras  optimize.py  predict.py  train.py  train_lstm.py
vocab/: create_vocab.py
(+2 files in other folders)
