[project]
name = "thesis-code"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "keras>=3.9.2",
    "scikit-learn>=1.6.1",
    "tree-sitter>=0.24.0",
    "tree-sitter-language-pack>=0.7.2",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "pytorch-triton-rocm>=3.3.0 ; sys_platform == 'linux'",
    "pandas>=2.2.3",
    "tqdm>=4.67.1",
    "matplotlib>=3.10.1",
    "seaborn>=0.13.2",
    "pydot>=3.0.4",
    "keras-tuner>=1.4.7",
    "protobuf>=6.30.2",
    "grpcio>=1.71.0",
]

[tool.uv.sources]
torch = [{ index = "pytorch-rocm", marker = "sys_platform == 'linux'" }]
torchvision = [{ index = "pytorch-rocm", marker = "sys_platform == 'linux'" }]
pytorch-triton-rocm = [
    { index = "pytorch-rocm", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.3"
explicit = true

[tool.ruff]
line-length = 140
